Add vulnerability count for HMD Vans. Add privileges for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -558,6 +558,7 @@
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
     "txt-vulnerabilityInfo": "Vulnerability Info",
+    "txt-VulnerabilityCount": "Vulnerabilities",
     "txt-filePathList": "File Path List",
     "txt-modifiedFileCount": "Modified files",
     "txt-taskFailure": "Task Failure",
