Add more fields for Vulnerabilities page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -203,6 +203,8 @@
   "txt-load": "Load",
   "txt-advanced": "Advanced",
   "txt-fileName": "File Name",
+  "txt-fixed": "Fixed",
+  "txt-notFixed": "Not Fixed",
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
@@ -411,6 +413,7 @@
       "txt-group": "Group",
       "txt-hostName": "Host Name",
       "txt-daysOpen": "Days Open",
+      "txt-fix": "Fix Status",
       "txt-system": "System",
       "txt-ip": "IP",
       "txt-departmentName": "Department",
