--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -786,6 +786,7 @@
     "relatedSoftware": "Related Software",
     "daysOpen": "Days Open",
     "exposedDevices": "Exposed Devices Count",
+    "fixedDevices": "Fixed Devices",
     "departmentSelected": "Department",
     "cpeKey": "CPE Key",
     "product": "Product",
