--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -203,6 +203,8 @@
   "txt-load": "載入",
   "txt-advanced": "進階",
   "txt-fileName": "檔案名稱",
+  "txt-fixed": "已修補",
+  "txt-notFixed": "未修補",
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
@@ -411,6 +413,7 @@
       "txt-group": "群組",
       "txt-hostName": "主機名稱",
       "txt-daysOpen": "已存在天數",
+      "txt-fix": "修補狀況",
       "txt-system": "作業系統",
       "txt-ip": "IP",
       "txt-departmentName": "部門",
